Bug 101168 - Missing repaint on undo with multiple windows
Summary: Missing repaint on undo with multiple windows
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-28 08:43 UTC by Miklos Vajna
Modified: 2016-10-25 18:39 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2016-07-28 08:43:06 UTC
Steps to reproduce:

1) open attachment 117083 [details] in Writer
2) window #1 has the cursor at the beginning of the first paragraph
3) window -> new window
4) put the cursor of window #2 to the end of the first paragraph (second line)
5) type 'bbb' in window #2
6) press undo in window #2
7) only window #2 is repainted, window #1 is left unchanged, 'bbb' is still there
Comment 1 Commit Notification 2016-07-28 12:23:25 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1e21c32a2f81b4ae5302fc8d537e4f200a1a3e76

tdf#101168 sw: fix missing repaint on undo with multiple windows

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.